--- a/src/pages/Card.css
+++ b/src/pages/Card.css
@@ -75,9 +75,29 @@
  display: flex;
  justify-content: center;
 }
+  
 .links{
-    background-color: rgb(0, 15, 64);
-    height: 40px;
-    text-align: center;
-    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    background-color: rgb(12, 12, 129);
+    font-size: 40px;
+    color:white;
+    margin-top: -15px;
 }
+
+.cont1 .links{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(12, 12, 129);
+    font-size: 40px;
+    color:white;
+    margin-top: -15px;
+}
+.links .MuiSvgIcon-root {
+    color: white;
+    font-size: 30px; 
+  }
+  .links.linkedin-icon{
+    margin-right: -10px;
+}
+  
