--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -94,7 +94,7 @@
     background-position: right 0.75rem top 50%, 0 0;
     background-size: 1em auto, 100%;
   }
- .project-details-container button {
+ /* .project-buttons button {
     display: inline;
     width: 50%;
     padding: 0.5rem;
@@ -104,11 +104,12 @@
     color: #fff;
     cursor: pointer;
     background-color: #0015ff;
-  }
+  } */
   .submit-button{
     display: inline;
+    border: 2px solid blue;
     width: 50%;
-    padding: 0.5rem;
+    padding: 10px 0px;
     border: none;
     font-size: 1rem;
     margin-left: 0;
@@ -117,6 +118,9 @@
     background-color: #0015ff;
     /* height: 20px; */
   }
+  .submit-button:hover{
+background-color: #1805c5;
+  }
   .project-buttons{
     display: flex;
     gap: 40px;
@@ -124,14 +128,20 @@
     /* border: 1px solid red; */
     justify-content: center;
   }
- .project-details-container button:hover {
-    background-color: #0b00dd;
-  }
-  #cancel-button {
-    border: 2px solid blue;
+  #cancel-kar{
+    border: 1px solid blue;
     background-color: #ffffff;
     color: #0000ff;
     transition: all 400ms;
+    width: 50%;
+    text-decoration: none;
+  }
+  #cancel-button {
+    /* border: 2px solid blue; */
+    background-color: #ffffff;
+    color: #0000ff;
+    transition: all 400ms;
+    width: 100%;
   }
   #cancel-button:hover {
     color: white;
